# bit-context-protocol

./: .gitignore  .mcp.json  Cargo.toml  README.md  RFC.txt  docker-compose.yml  mise.toml  package.json  tsconfig.json
.claude/: bun-claude.md  lo-claude.md
.claude/spec/lcp-poc/: DESIGN_DECISIONS.md  OVERVIEW.md  SPEC_01.md  SPEC_02.md  SPEC_03.md  SPEC_04.md  SPEC_05.md  SPEC_06.md  SPEC_07.md  SPEC_08.md  SPEC_09.md  SPEC_10.md  SPEC_11.md  SPEC_12.md  SPEC_DOCUMENT_STRATEGY.md
.github/workflows/: build.yml  clippy.yml  test.yml
.loclaude/: config.json
crates/bcp-bench-real/: Cargo.toml
crates/bcp-bench-real/benches/: tiktoken.rs
crates/bcp-bench-real/fixtures/: real_session_large.json  real_session_medium.json  real_session_small.json
crates/bcp-bench-real/src/: fixture.rs  lib.rs  markdown.rs  token_counter.rs
crates/bcp-cli/: Cargo.toml
crates/bcp-cli/src/: cmd_decode.rs  cmd_encode.rs  cmd_inspect.rs  cmd_stats.rs  cmd_validate.rs  main.rs
crates/bcp-decoder/: Cargo.toml
crates/bcp-decoder/src/: block_reader.rs  decoder.rs  decompression.rs  error.rs  lib.rs  streaming.rs
crates/bcp-driver/: Cargo.toml
crates/bcp-driver/src/: budget.rs  config.rs  driver.rs  error.rs  lib.rs  placeholder.rs  render_markdown.rs  render_minimal.rs  render_xml.rs
crates/bcp-driver/tests/: render_integration.rs
crates/bcp-encoder/: Cargo.toml
crates/bcp-encoder/src/: block_writer.rs  compression.rs  content_store.rs  encoder.rs  error.rs  lib.rs
crates/bcp-tests/: Cargo.toml
crates/bcp-tests/benches/: decode.rs  encode.rs  token_savings.rs
crates/bcp-tests/tests/: budget.rs  conformance.rs  edge_cases.rs  roundtrip.rs  token_savings.rs
crates/bcp-tests/tests/golden/all_block_types/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/budget_constrained/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/compressed_blocks/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/compressed_payload/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/content_addressed/: content_store.json  manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/conversation/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/edge_cases/empty_content/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/edge_cases/large_varint/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/edge_cases/trailing_data/: payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/edge_cases/unknown_block_type/: payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/mixed_blocks/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/simple_code/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/golden/with_summaries/: manifest.json  payload.bcp  payload.lcp
crates/bcp-tests/tests/snapshots/: conformance__all_block_types_markdown.snap  conformance__all_block_types_minimal.snap  conformance__all_block_types_xml.snap  conformance__budget_constrained_minimal_500.snap  conformance__budget_constrained_xml_200.snap  conformance__compressed_blocks_markdown.snap  conformance__compressed_blocks_minimal.snap  conformance__compressed_blocks_xml.snap  conformance__compressed_payload_markdown.snap  conformance__compressed_payload_minimal.snap  conformance__compressed_payload_xml.snap  conformance__content_addressed_markdown.snap  conformance__content_addressed_minimal.snap  conformance__content_addressed_xml.snap  conformance__conversation_markdown.snap  conformance__conversation_minimal.snap  conformance__conversation_xml.snap  conformance__mixed_blocks_markdown.snap  conformance__mixed_blocks_minimal.snap  conformance__mixed_blocks_xml.snap  conformance__simple_code_markdown.snap  conformance__simple_code_minimal.snap  conformance__simple_code_xml.snap  conformance__with_summaries_markdown.snap  conformance__with_summaries_minimal.snap  conformance__with_summaries_xml.snap
crates/bcp-types/: Cargo.toml  README.md
crates/bcp-types/src/: annotation.rs  block.rs  block_type.rs  code.rs  content_store.rs  conversation.rs  diff.rs  document.rs  embedding_ref.rs  end.rs  enums.rs  error.rs  extension.rs  fields.rs  file_tree.rs  image.rs  lib.rs  structured_data.rs  summary.rs  tool_result.rs
crates/bcp-wire/: Cargo.toml
crates/bcp-wire/src/: block_frame.rs  error.rs  header.rs  lib.rs  varint.rs
docs/: README.md  _coverpage.md  _sidebar.md  architecture.md  block-type-definitions.md  block-types.md  crate-bcp-cli.md  crate-bcp-decoder.md  crate-bcp-driver.md  crate-bcp-encoder.md  crate-bcp-types.md  crate-bcp-wire.md  custom.css  decoder.md  driver.md  encoder.md  errors.md  index.html  spec_10.md  wire-primitives.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: block_frame.rs  block_frame_roundtrip.rs  decode_body.rs  decode_payload.rs  encode_decode_roundtrip.rs  fields.rs  header.rs  header_roundtrip.rs  varint.rs  varint_roundtrip.rs
