# /Cargo.toml (workspace root)
[workspace]
members = [
    "crates/bcp-wire",
    "crates/bcp-types",
    "crates/bcp-encoder",
    "crates/bcp-decoder",
    "crates/bcp-driver",
    "crates/bcp-cli",
    "crates/bcp-tests",
]
resolver = "2"  # Always use resolver 2 (default in 2024 edition but explicit is good)

# This is the equivalent of hoisting shared deps in package.json
[workspace.dependencies]
thiserror = "2"
anyhow = "1"
zstd = "0.13"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
insta = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }